2 hours and 55 minutes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,4 @@
 {
-  "apellidos": "Ortiz",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=WebAPIBiblioteca;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   },
@@ -8,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "llavejwt": "FOEWRNUIOQRJQUIOHGFUWIEHGC4665446464"
 }
