--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "llavejwt": "FOEWRNUIOQRJQUIOHGFUWIEHGC4665446464"
+  "llavejwt": "FOEWRNUIOQRJQUIOHGFUWIEHGC4665446464",
+  "origenesPermitidos": [
+    "http://127.0.0.1:5500"
+  ]
 }
