--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=WebAPIBiblioteca;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
-    "AzureStorageConnection": "REDIT"
+    "AzureStorageConnection": "REDIT",
+    "redis": "REDIT"
   },
   "Logging": {
     "LogLevel": {
