--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=WebAPIBiblioteca;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
-    "AzureStorageConnection": "REDIT",
-    "redis": "REDIT"
+    "DefaultConnection": "Server=localhost,1433;Database=WebAPIBiblioteca;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
